apps/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma-pod
        image: louislam/uptime-kuma@sha256:4c364ef96aaddac7ec4c85f5e5f31c3394d35f631381ccbbf93f18fd26ac7cba
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
        volumeMounts:
          - name: uptime-pvc
            mountPath: /app/data
      volumes:
        - name: uptime-pvc
          persistentVolumeClaim:
            claimName: uptime-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-service
  labels:
    app: uptime-kuma
spec:
  ports:
    - name: uptime-kuma
      port: 3001
      targetPort: 3001
  selector:
    app: uptime-kuma
